fix country row link color

--- a/src/components/CountryRow/countryRow.scss
+++ b/src/components/CountryRow/countryRow.scss
@@ -1,6 +1,10 @@
 @import '../../styles/variables';
 
 .country-row {
+  &__link {
+    color: black;
+  }
+
   &__img {
     width: 100%;
     max-width: 100px;
