--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -23,3 +23,6 @@ $sidebar-width: 20%;
 // Border
 $bd-sidebar: 1.5px solid $clr-gray;
 $bd-line: 1px solid $clr-dark;
+
+// Box-shadow
+$box-shadow: 2px 2px 5px black;
