--- a/src/components/CountryCard/countryCard.scss
+++ b/src/components/CountryCard/countryCard.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables';
+
 .country-card {
   width: 80%;
   max-width: 700px;
@@ -8,7 +10,7 @@
   align-items: flex-start;
   border-radius: 5px;
   border: 1px solid black;
-  box-shadow: 2px 2px 5px black;
+  box-shadow: $box-shadow;
 
   &__head-container {
     width: 100%;
