--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -65,7 +65,7 @@
       th,
       td {
         padding: 0.5rem;
-        text-align: left;
+        text-align: center;
         border-bottom: 1px solid #ddd;
       }
     }
